fix: trying to fix image bug on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -576,12 +576,13 @@ main #portfolio div {
 main #portfolio a {
     margin: auto;
     height: 100%;
-    min-height: 10rem;
+    min-height: 13rem;
     color: black;
 }
 
 main #portfolio a.portrait {
     grid-row: span 2;
+    min-height: 26.85rem;
 }
 
 main #portfolio div a.hidden {
